# pong-cpp2

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
cmake/: cppfront.cmake  fetched-libs.cmake  prelude.cmake
source/: main.cpp2  pong.h2
